@@ -10,7 +10,6 @@ import java.util.Locale;
 
 import com.serotonin.m2m2.Common;
 import com.serotonin.m2m2.DataTypes;
-import com.serotonin.m2m2.vo.User;
 
 /**
  * @author Matthew Lohbihler
@@ -18,15 +17,13 @@ import com.serotonin.m2m2.vo.User;
 public class NumericValue extends DataValue implements Comparable<NumericValue> {
     
     public static NumericValue parseNumeric(String s) {
+        return parseNumeric(s, Common.getLocale());
+    }
+    
+    public static NumericValue parseNumeric(String s, Locale locale){
         if (s == null)
             return new NumericValue(0);
         try {
-            User user = Common.getHttpUser();
-            Locale locale = null;
-            if(user == null)
-                locale = Common.getLocale();
-            else
-                locale = user.getLocaleObject();
         	NumberFormat format = NumberFormat.getInstance(locale);
             Number number = format.parse(s);
             return new NumericValue(number.doubleValue());
